Fix image block align

--- a/src/styles/blog.module.css
+++ b/src/styles/blog.module.css
@@ -89,7 +89,7 @@
 .post :global(video),
 .post :global(img) {
   max-width: 100%;
-  display: block;
+  display: inline-block;
 }
 .post :global(blockquote) {
   margin: 0.6rem 0;
